[package]
name = "event-emitter"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "simulate promise implementation for rust"
repository = "https://github.com/Shcarp/rs-event-emitter.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
