[package]
name = "rs-event-emitter"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "simulate promise implementation for rust"
repository = "https://github.com/Shcarp/rs-event-emitter.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
